organization changes update

--- a/management-ui/src/app/management-module/management.component.html
+++ b/management-ui/src/app/management-module/management.component.html
@@ -2,7 +2,7 @@
     <div class="col-1 container-fluid"><button (click)="claimTask()" mat-raised-button color="primary">Claim
             Task</button></div>
 </div>
-<div *ngIf="formScreen" class="row">
+<div *ngIf="formScreen && formScreen === 'define-new-organization-form'" class="row">
     <div class="col-5 container-fluid">
         <organization></organization>
     </div>
