--- a/reservation-ui/src/app/reserveclub/reserveclub.component.html
+++ b/reservation-ui/src/app/reserveclub/reserveclub.component.html
@@ -52,6 +52,7 @@
         
         
     </div>
+    <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '20px' }"></ngx-loading>
     <div class="row">   
        
     </div>
