--- a/reservation-ui/src/app/reserveclub/reserveclub.component.html
+++ b/reservation-ui/src/app/reserveclub/reserveclub.component.html
@@ -39,13 +39,13 @@
     <div class="row">
         <div class="col-lg-6">
             <mat-form-field>
-                <mat-label>Distance from member home address to service club </mat-label>
+                <mat-label>Miles from member home address to service club </mat-label>
                 <input matInput formControlName="distanceMHRC" placeholder="" readonly value="{{this.selectedMHRCDistance}}">
             </mat-form-field>
         </div>
         <div class="col-lg-6">
             <mat-form-field>
-                <mat-label>Distance from member home club to service club </mat-label>
+                <mat-label>Miles from member home club to service club </mat-label>
                 <input matInput formControlName="distanceHCRC" placeholder="" readonly value="{{this.selectedHCRCDistance}}">
             </mat-form-field>
         </div>
