--- a/reservation-ui/src/app/reserveclub/reserveclub.component.scss
+++ b/reservation-ui/src/app/reserveclub/reserveclub.component.scss
@@ -8,6 +8,7 @@
 
 ::ng-deep .mat-tooltip {
     font-size: 15px;
+    font-family: "Courier New", Courier, monospace;
     max-width: 350px !important;
     white-space: pre-line !important;
 }
